--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -156,7 +156,7 @@ connection ,/n./@连接;,/n./@联系;
 conscience ,/n./@良心;
 consensual ,/adj./@;兩愿的,/adj./@交感的;,/adj./@双方同意下成立的;
 consistent ,/adj./@一致的;,/adj./@坚持的;,/adj./@始终如一的;
-conspiracy ,/n./@阴谋;,/n./@共谋;
+conspiracy ,/n./@阴谋;,/n./@共谋;,/n./@密谋;
 constantly ,/adv./@经常地;
 constraint ,/n./@約束;
 consultant ,/n./@顾问;
@@ -205,6 +205,7 @@ department ,/n./@部@门;,/n./@系;
 deposition ,/n./@免職;,/n./@罷官;
 deprecated ,/v./@弃用;,/v./@不赞成;,/v./@不宜用;,/adj./@废弃的;,/adj./@弃用的;
 depression ,/n./@抑郁;,/n./@萧条;
+derogatory ,/adj./@贬低的;
 desalinate ,/v./@脫鹽;,/v./@淡化;
 descendant ,/n./@子孙;,/n./@后裔;
 despicable ,/adj./@卑鄙的;
