--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -8,7 +8,7 @@ affirmation ,/n./@肯定;,/n./@确定;,/n./@确认;
 affirmative ,/adj./@肯定的;
 aggregation ,/n./@集合;
 agriculture ,/n./@农业;
-altercation ,/n./@爭執;,/n./@鬥毆;
+altercation ,/n./@爭執;,/n./@鬥毆;,/n./@争吵;
 alternative ,/adj./@选择性的;,/adj./@替代性的;
 amphetamine ,/n./@安非他明;
 analyzation ,/n./@分析;
@@ -297,8 +297,8 @@ regurgitate ,/v./@回流;,/v./@反芻;,/v./@反胃;
 reluctantly ,/adj./@不情愿的;
 remembrance ,/n./@記憶;,/n./@紀念;,/n./@記性;
 reminiscent ,/adj./@追忆往事的;,/adj./@怀旧的;
-Renaissance ,/n./@文艺复兴;
 renaissance ,/n./@复活;,/n./@再生;
+Renaissance ,/n./@文艺复兴;
 replacement ,/n./@代替;
 requirement ,/n./@要求;,/n./@需要;
 resemblance ,/n./@相似;
