--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -38,7 +38,7 @@ complication ,/n./@复杂;,/n./@复杂化;
 conciliatory ,/adj./@安撫的;
 condemnation ,/n./@譴責;,/n./@判決;
 confidential ,/adj./@機密的;
-confirmation ,/n./@确认;
+confirmation ,/n./@确认;,/n./@证实;,/n./@巩固;
 conglomerate ,/n./@礫岩;,/n./@企業集團;,/n./@聚合物;
 congratulate ,/v./@祝贺;
 congregation ,/n./@聚集;,/n./@会众;
@@ -87,7 +87,7 @@ extravagance ,/n./@奢侈;,/n./@浪費;
 gerontocracy ,/n./@老人政治;,/n./@老人政府;
 heterosexual ,/adj./@異性的;,/adj./@異性戀的;
 housewarming ,/n./@乔迁庆宴;
-hypothetical ,/adj./@假设的;
+hypothetical ,/adj./@假设的;,/adj./@假言的;
 illumination ,/n./@照明;,/n./@启发;
 illustration ,/n./@阐明;,/n./@图示;
 illustrative ,/adj./@說明的;
@@ -132,6 +132,7 @@ modification ,/n./@修正;
 narcissistic ,/adj./@孤芳自赏的;
 nevertheless ,/conj./@尽管如此;
 notification ,/n./@通知;
+occupational ,/adj./@职业的;
 organisation ,/n./@组织;
 organization ,/n./@组织;
 ostentatious ,/adj./@招搖的;,/adj./@誇耀的;
