--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -71,6 +71,7 @@ justification ,/n./@正当性;
 magnification ,/n./@放大;,/n./@放大率;
 manifestation ,/n./@表明;
 Mediterranean ,/adj./@地中的;
+miscellaneous ,/adj./@混雜的;,/adj./@各種各樣的;
 misunderstood ,/v./@误解;,/v./@误会;
 monochromatic ,/adj./@單色的;
 multicultural ,/adj./@多元文化的;
