--- a/Files/lang/ch/chinese17.csv
+++ b/Files/lang/ch/chinese17.csv
@@ -1,3 +1,4 @@
+conversationalist ,/n./@健谈的人;
 industrialization ,/n./@工业化;
 interrelationship ,/n./@相互關係;,/n./@相互聯係;,/n./@相互關聯;
 radiobroadcasting ,/n./@無綫電廣播;
