--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -23,7 +23,7 @@ ask ,/v./@問;
 ass ,/n./@屁股;,/n./@驢;
 ave ,/n./@大街;,/n./@林蔭道;
 awe ,/v./@敬畏;
-axe ,/n./@斧子;
+axe ,/n./@斧子;,/n./@裁减;
 bad ,/adj./@壞的;,/adj./@不好的;
 bag ,/n./@包;,/n./@袋;
 ban ,/v./@禁止;
@@ -48,7 +48,7 @@ bun ,/n./@饅頭;
 bus ,/n./@公交車;
 but ,/conj./@但是;,/adv./@僅僅;,/prep./@除了;
 buy ,/v./@買;
-cab ,/n./@出租車;
+cab ,/n./@出租車;,/n./@驾驶室;
 cad ,/n./@無賴;
 can ,/aux./@能;,/aux./@可以;
 cap ,/n./@帽子;,/n./@盖@子;
@@ -179,6 +179,7 @@ let ,/v./@讓;
 lid ,/n./@蓋子;
 lie ,/v./@騙;
 lip ,/n./@嘴唇;
+lit ,/adj./@照亮的;,/adj./@点着的;,/adj./@燃燒著的;
 log ,/n./@木材;
 loo ,/n./@廁所;
 lot ,/n./@場;
@@ -188,8 +189,8 @@ man ,/n./@人;,/n./@男人;
 map ,/n./@地圖;,/v./@籌劃;
 mar ,/v./@毀壞;
 mat ,/n./@席子;
-may ,/aux./@能;,/adv./@可能;
 May ,/n./@五月;
+may ,/aux./@能;,/adv./@可能;
 mea ,/pron./@我;
 men ,/n./@男人;
 met ,/v./@遇見;
@@ -299,7 +300,7 @@ sue ,/v./@控告;
 sum ,/n./@綜合;
 sun ,/n./@太陽;
 tab ,/n./@標簽;,/n./@制表;
-tag ,/n./@標簽;,/n./@附屬物;,/v./@尾隨;
+tag ,/n./@標簽;,/n./@附屬物;,/v./@尾隨;,/vt./@标记;,/vt./@跟踪;,/n./@电子跟踪器;,/n./@警句;,/n./@标识符;
 tap ,/v./@叩;,/v./@竊聽;
 tar ,/n./@瀝青;,/n./@柏油;
 tat ,/v./@梭織;
