--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -115,7 +115,7 @@ care ,/v./@关心;
 carp ,/v./@挑剔;,/n./@鯉魚;
 cart ,/n./@手推車;
 case ,/n./@情況;
-cash ,/n./@現金;
+cash ,/n./@現金;,/vt./@兑现;
 cast ,/v./@投擲;,/v./@投射;,/v./@闡明;,/n./@鑄模;,/n./@鑄件;,/n./@全體演員;,/n./@石膏;
 cave ,/n./@洞穴;
 cede ,/v./@放棄;,/v./@割讓;
@@ -174,6 +174,7 @@ curl ,/v./@彎曲;,/n./@捲髮;
 cute ,/adj./@可愛的;
 cyan ,/adj./@青;,/n./@青色;
 daft ,/adj./@癲狂的;,/adj./@蠢的;
+dale ,/n./@山谷;,/n./@峡谷;
 damn ,/v./@譴責;,/int./@該死;
 damp ,/adj./@潮濕的;
 dank ,/adj./@潮濕的;,/adj./@陰濕的;,/adj./@透水的;
@@ -717,7 +718,7 @@ plan ,/n./@計劃;
 play ,/v./@玩;,/v./@演奏;,/n./@戲劇;,/n./@節目;
 plea ,/v./@懇求;
 plod ,/v./@辛勤工作;,/v./@沉重地走;
-plot ,/n./@詭計;,/n./@陰謀;,/n./@陷阱;
+plot ,/n./@詭計;,/n./@陰謀;,/n./@陷阱;,/n./@情节;,/n./@图表;,/vt./@标出;,/n./@地皮;
 plow ,/n./@犁;,/v./@耕;
 plug ,/v./@插;
 plum ,/n./@李子;,/n./@梅子;,/n./@紫紅色;
@@ -914,12 +915,12 @@ stem ,/n./@主干;
 step ,/n./@步;,/v./@踩;
 stir ,/v./@攪拌;,/v./@煽動;,/n./@騷亂;
 stop ,/v./@停止;
-stub ,/n./@煙蒂;,/n./@斷株;,/v./@踩熄;,/v./@拔除;
+stub ,/n./@煙蒂;,/n./@斷株;,/v./@踩熄;,/v./@拔除;,/n./@存根;,/n./@票根;
 stud ,/n./@種馬;,/v./@散布;,/n./@大頭釘;
 stun ,/v./@震驚;,/v./@打昏;
 such ,/adj./@這樣的;,/adj./@如此;
 suck ,/v./@吸吮;
-suit ,/v./@適合;,/n./@訴訟;,/n./@套裝;
+suit ,/v./@適合;,/n./@訴訟;,/n./@套裝;,/n./@要员;,/vi./@合适;
 sulk ,/v./@生氣;,/n./@生氣;
 sure ,/adj./@當然;
 surf ,/v./@衝浪;
