--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -152,8 +152,9 @@ bored ,/adj./@無聊的;
 bosom ,/n./@胸;
 bound ,/vt./@束縛;,/n./@跳躍;,/n./@界限;
 bowel ,/n./@腸;
-brace ,/n./@大括號;
+brace ,/n./@大括號;,/n./@支架;,/n./@牙箍;,/n./@梏具;,/vi./@俯身抱头;,/vt./@加固;,/vt./@顶住;
 brain ,/n./@頭腦;
+brake ,/n./@刹车;,/n./@制动;,/vi./@刹车;
 brand ,/n./@品牌;,/n./@商標;,/v./@烙;
 brass ,/adj./@黃銅的;,/n./@黃銅;
 brave ,/adj./@勇敢的;
@@ -245,7 +246,7 @@ cloth ,/n./@布;
 cloud ,/n./@雲;
 clout ,/n./@權力;,/n./@势力;,/n./@影响力;,/n./@重击;,/vt./@重击;
 clown ,/n./@小醜;
-coach ,/n./@教練;,/n./@長途公共汽車;,/v./@訓練;,/v./@培訓;,/v./@輔導;
+coach ,/n./@教練;,/n./@長途公共汽車;,/v./@訓練;,/v./@培訓;,/v./@輔導;,/n./@火车车厢;
 coast ,/n./@海岸;
 cocky ,/adj./@自大的;
 colon ,/n./@冒號;,/n./@結腸;,/n./@科隆;
@@ -284,7 +285,7 @@ crimp ,/n./@捲曲;,/n./@褶皺;
 crisp ,/adj./@鬆脆的;
 croak ,/v./@呱呱叫;,/vi./@咽气;
 crook ,/n./@骗子;,/n./@弯曲;,/n./@弯处;,/n./@坏蛋;
-cross ,/v./@穿越;
+cross ,/v./@穿越;,/n./@叉形;,/n./@十字架;,/n./@十字标;,/adj./@横向的;,/adj./@斜线的;,/vt./@穿过;,/vt./@横穿;
 crowd ,/n./@人羣;
 crown ,/n./@王冠;
 crude ,/adj./@粗糙的;
@@ -295,7 +296,7 @@ crypt ,/n./@地窖;
 culpa ,/n./@疏忽;,/n./@罪;
 curly ,/adj./@捲曲的;,/adj./@捲毛的;
 curry ,/n./@咖哩;
-curve ,/n./@曲綫;,/n./@彎曲;
+curve ,/n./@曲綫;,/n./@彎曲;,/vi./@弯曲;
 cyber ,/adj./@網絡的;
 cynic ,/n./@忿世嫉俗者;
 dairy ,/n./@乳業;
@@ -345,7 +346,7 @@ dress ,/v./@穿著;,/n./@連衣裙;
 drift ,/v./@漂流;,/v./@漂移;,/v./@漂泊;
 drill ,/v./@鑽;
 drink ,/v./@喝;,/v./@飲;
-drive ,/v./@駕駛;,/v./@驅動;
+drive ,/v./@駕駛;,/v./@驅動;,/n./@驱动器;,/vt./@操作;,/vi./@开车;,/n./@驱赶;,/vt./@驱赶;,/vt./@迫使;,/n./@车道;,/n./@路;,/n./@抽球;,/n./@活动;,/n./@运动;,/n./@欲望;,/n./@比赛;
 drone ,/n./@無人機;,/n./@雄蜂;
 drool ,/n./@口水;
 drunk ,/adj./@喝醉的@<drink的過去式>;
@@ -501,7 +502,7 @@ gourd ,/n./@葫蘆;
 grade ,/n./@年級;,/n./@等級;,/n./@評分;,/n./@成績;
 grail ,/n./@杯;,/n./@聖杯;
 grain ,/n./@穀物;,/n./@糧食;,/n./@顆粒;,/n./@穀粒;
-grand ,/adj./@宏偉的;,/adj./@極好的;,/adj./@重大的;
+grand ,/adj./@宏偉的;,/adj./@極好的;,/adj./@重大的;,/n./@一千英镑;,/n./@一千美元;,/n./@大钢琴;
 grant ,/v./@授予;
 graph ,/n./@圖表;,/n./@曲綫圖;
 grasp ,/v./@抓緊;,/n./@掌握;,/n./@控制;,/n./@理解;,/vt./@抓住;,/vt./@理解;
@@ -513,7 +514,7 @@ greed ,/n./@貪婪;,/n./@貪心;
 green ,/n./@綠色;,/adj./@綠色的;
 grief ,/n./@悲哀;
 grill ,/v./@燒;,/v./@烤;,/v./@拷問;,/n./@烤架;,/n./@烤肉;
-grind ,/v./@碾碎;,/v./@磨碎;
+grind ,/v./@碾碎;,/v./@磨碎;,/n./@苦差;,/n./@研磨;,/vt./@压迫;
 groan ,/v./@呻吟;
 groom ,/n./@新郎;
 gross ,/adj./@總的;,/adj./@粗糙的;,/adj./@粗野的;,/adj./@惡劣的;
@@ -604,6 +605,7 @@ lapel ,/n./@翻領;
 lapse ,/v./@流逝;
 large ,/adj./@大的;
 lasso ,/n./@套索;,/v./@拉攏;,/v./@套捕;
+latch ,/n./@门闩;,/n./@弹簧锁;
 later ,/adv./@后來;,/adv./@稍後;,/adj./@更遲的;
 laugh ,/v./@笑;
 laver ,/n./@紫菜;,/n./@水盆;
@@ -655,8 +657,8 @@ magic ,/n./@魔術;
 major ,/adj./@主要的;
 mango ,/n./@芒果;
 mania ,/n./@狂熱;
-march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
 March ,/n./@三月;
+march ,/v./@行進;,/n./@行軍;,/n./@進軍;,/vi./@行軍;,/vi./@進軍;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
@@ -785,6 +787,7 @@ piano ,/n./@鋼琴;
 picky ,/adj./@挑剔的;
 piece ,/n./@片;,/n./@塊;
 piety ,/n./@虔誠;,/n./@孝敬;
+piker ,/n./@膽小鬼;
 pilot ,/n./@飛行員;
 pinch ,/v./@捏;,/v./@掐;,/v./@擠;
 pious ,/adj./@虔誠的;
@@ -957,7 +960,7 @@ sheet ,/n./@紙張;
 sheft ,/n./@軸;
 shelf ,/n./@架子;,/n./@櫥子;
 shell ,/n./@殻;
-shift ,/v./@移動;,/v./@轉換;,/v./@變化;
+shift ,/v./@移動;,/v./@轉換;,/v./@變化;,/n./@轮班;
 shine ,/v./@閃耀;
 shock ,/v./@震驚;
 shoot ,/v./@拍攝;,/v./@射擊;
@@ -1174,7 +1177,7 @@ towel ,/n./@毛巾;
 tower ,/n./@塔;
 toxic ,/adj./@有毒的;
 trace ,/v./@追蹤;
-track ,/n./@軌道;,/n./@路徑;
+track ,/n./@軌道;,/n./@路徑;,/n./@铁轨;,/n./@跑道;,/n./@车辙;,/n./@足迹;,/n./@行踪;,/n./@履带;
 tract ,/n./@道;,/n./@冊子;
 trade ,/n.//v./@交易;
 trail ,/v./@追蹤;,/n./@小徑;
