--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -196,6 +196,7 @@ burial ,/n./@葬禮;
 butler ,/n./@男管家;,/n./@僕役長;
 butter ,/n./@黃油;
 button ,/n./@按鈕;,/n./@紐扣;
+buyout ,/n./@控股权收购;,/n./@收購;
 bypass ,/v./@繞開;,/v./@忽視;
 cackle ,/v./@饒舌;,/v./@喋喋不休;
 caliph ,/n./@哈里发@(穆斯林国家的统治者);
@@ -411,6 +412,7 @@ dragon ,/n./@龍;
 drawer ,/n./@抽匣;
 dreary ,/adj./@沉悶的;,/adj./@沉鬱的;,/adj./@凄涼的;,/adj./@枯燥的;,/adj./@乏味的;
 driver ,/n./@司機;
+duffel ,/n./@起绒粗呢;
 duress ,/v./@強迫;,/v./@監禁;
 during ,/v./@在@(...)期間;
 dynamo ,/n./@发电机;
@@ -551,6 +553,7 @@ frugal ,/adj./@節儉的;,/adj./@樸素的;
 frumpy ,/adj./@過時的;
 fungal ,/adj./@眞菌的;
 funnel ,/n./@漏斗;,/n./@煙囪;
+furrow ,/n./@沟;,/n./@深痕;,/n./@皱纹;,/vt./@犁;
 futile ,/adj./@徒勞的;,/adj./@無用的;
 future ,/n./@未來;
 gadget ,/n./@小玩意;
@@ -610,6 +613,7 @@ harrow ,/n./@耙;,/vt./@耙;,/vt./@煩擾;
 hassle ,/n./@麻煩;,/n./@困難;,/v./@爭辯;
 hasten ,/v./@加速;
 hatred ,/n./@仇恨;
+hazard ,/n./@危险;,/n./@隐患;,/n./@风险;,/n./@障碍物;
 health ,/n./@健康;
 hearth ,/n./@壁爐;,/n./@爐邊;
 heaven ,/n./@天堂;,/n./@天空;
@@ -1258,7 +1262,7 @@ street ,/n./@街道;
 stress ,/v./@強調;,/n./壓力;
 strict ,/adj./@嚴格的;
 stride ,/n./@大步;,/v./@大步走;
-strike ,/v./@罷工;,/v./@襲擊;,/v./@突然想到;
+strike ,/v./@罷工;,/v./@襲擊;,/v./@突然想到;,/n./@袭击;,/vt./@打;
 string ,/n./@綫;,/n./@繩;,/n./@串;
 stripe ,/n./@條紋;
 strive ,/v./@努力;,/v./@力求;
@@ -1372,6 +1376,7 @@ undone ,/v./@解開;
 unfair ,/adj./@不公平的;
 unfold ,/v./@打開;,/v./@展開;
 unhold ,/v./@釋放;
+unhook ,/vt./@解开;,/vt./@脱钩;
 unique ,/adj./@獨一無二的;
 unisex ,/adj./@不分男女的;
 unison ,/n./@和諧;
@@ -1398,7 +1403,7 @@ vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
 vagina ,/n./@陰道;
 vainly ,/adv./@徒勞地;
-valley ,/n./@山谷;
+valley ,/n./@山谷;,/n./@河谷;,/n./@溪谷;
 valour ,/n./@英勇;,/n./@勇猛;,/n./@勇武;
 vandal ,/n./@破壞文化藝術者;
 vanish ,/v./@消失;
@@ -1442,7 +1447,7 @@ winery ,/n./@釀酒廠;
 winter ,/n./@冬;
 wisdom ,/n./@智慧;
 wisely ,/adj./@明智的;
-wither ,/v./@枯萎;
+wither ,/v./@枯萎;,/vi./@衰落;
 within ,/prep./@在@...中;
 wizard ,/n./@巫師;
 woeful ,/adj./@悲伤的;,/adj./@悲惨的;,/adj./@严重的;,/adj./@可悲的;
