--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -298,6 +298,7 @@ costume ,/n./@服裝;
 cottage ,/n./@小屋;,/n./@村舍;
 counsel ,/v./@建議;,/v./@商討;,/v./@勸告;,/n./@顧問;,/v./@商議;
 country ,/n./@國家;
+coupler ,/n./@耦合器;,/n./@连接器;,/n./@车钩;,/n./@联键音栓;
 courage ,/n./@勇氣;
 courier ,/n./@快遞員;,/n./@情報員;,/n./@通訊員;
 cramped ,/adj./@狹窄的;
@@ -661,7 +662,7 @@ kidding ,/n./@開玩笑;
 kingdom ,/n./@王國;
 kinship ,/n./@親屬關係;
 kitchen ,/n./@廚房;
-knuckle ,/n./@關節;
+knuckle ,/n./@關節;,/n./@指關節;,/n./@蹄;
 laborer ,/n./@勞工;,/n./@勞動者;
 lacquer ,/n./@漆;,/n./@漆器;,/v./@塗@漆;
 lambast ,/v./@鞭打;,/v./@痛斥;
@@ -928,7 +929,7 @@ promise ,/v./@承諾;
 promote ,/v./@促進;,/v./@提拔;,/v./@推銷;
 pronoun ,/n./@代詞;
 prophet ,/n./@先知;
-propose ,/v./@提議;
+propose ,/v./@提議;,/vt./@提出;,/vt./@打算;
 protect ,/v./@保護;
 protein ,/n./@蛋白質;
 protest ,/v./@反對;,/v./@抗議;
@@ -1036,6 +1037,7 @@ scooter ,/n./@滑板車;,/n./@小型摩托車;,/n./@踏板車;
 scourge ,/v./@鞭打;,/v./@痛斥;,/n./@鞭;,/n./@災禍;
 scratch ,/v./@抓;,/v./@搔;,/v./@劃;
 screech ,/v./@尖叫;
+scumbag ,/n./@卑鄙的家伙;
 seastar ,/n./@海星;
 secrecy ,/n./@秘密;
 section ,/n./@部分;,/n./@區域;,/n./@章節;
@@ -1105,6 +1107,7 @@ sponsor ,/n./@贊助;,/n./@贊助者;
 spousal ,/adj./@配偶的;,/adj./@与配偶有关的;
 squalid ,/adj./@骯髒的;,/adj./@汙穢的;,/adj./@卑劣的;
 squeeze ,/v./@擠榨;
+staffer ,/n./@職員;,/n./@工作人員;
 stagger ,/v./@蹣跚;
 stalker ,/n./@跟踪者;
 stamina ,/n./@毅力;,/n./@精力;,/n./@活力;,/n./@持久力;
