--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -155,7 +155,7 @@ cardinal ,/adj./@主要的;,/adj./@鲜红色的;,/n./@红衣主教;
 careless ,/adj./@马虎的;,/adj./@疏忽的;
 carnival ,/n./@狂歡節;,/n./@嘉年華會;
 carousel ,/n./@旋转木马;
-carriage ,/n./@运输;,/n./@四轮马车;
+carriage ,/n./@运输;,/n./@四轮马车;,/n./@车厢;
 cashmere ,/n./@羊絨;
 casually ,/adj./@随便的;
 casualty ,/n./@傷亡;
@@ -199,6 +199,7 @@ Columbia ,/n./@哥伦比亚;
 commence ,/n./@开始;
 commerce ,/n./@商业;
 communal ,/adj./@公用的;
+commuter ,/n./@通勤者;
 compiler ,/n./@编译器;
 complain ,/v./@投诉;
 complete ,/adj./@完全的;
@@ -270,6 +271,7 @@ December ,/n./@十二月;
 decision ,/n./@决定;
 decisive ,/adj./@决断的;
 decorate ,/v./@装修;
+decouple ,/vt./@脱钩;,/vt./@分離;,/vt./@解耦;,/vt./@拆開;
 decrease ,/v./@减少;
 decypher ,/v./@破譯;
 dedicate ,/v./@獻身;,/v./@奉献;,/v./@致力;
@@ -318,7 +320,7 @@ disguise ,/v.//n./@掩饰;,/v.//n./@伪装;
 dishevel ,/v./@弄亂;
 dismount ,/v./@下;,/vt./@卸下;
 disorder ,/n./@混乱;
-dispatch ,/v./@派遣;,/v./@分派;,/n./@派遣;,/n./@急件;
+dispatch ,/v./@派遣;,/v./@分派;,/n./@派遣;,/n./@急件;,/n./@杀死;,/vt./@杀死;,/vt./@发送;
 dispense ,/v./@分配;,/v./@免除;,/v./@豁免;
 disposal ,/n./@处理;,/n./@清理;
 disprove ,/v./@反驳;
@@ -347,6 +349,7 @@ dumpling ,/n./@餃子;,/n./@湯糰;,/n./@麵糰;
 duration ,/n./@持续;
 dynamite ,/n./@炸药;
 dystopia ,/n./@糟糕的社會;,/n./@地獄般的處境;
+eclectic ,/adj./@兼收并蓄的;,/adj./@不拘一格的;,/adj./@相容並蓄的;,/adj./@博採眾長的;
 economic ,/adj./@经济学的;
 effluvia ,/n./@氣味;
 effusive ,/adj./@流出的;,/adj./@熱情洋溢的;
@@ -586,7 +589,7 @@ laughter ,/n./@笑;,/n./@笑聲;
 lavatory ,/n./@盥洗室;,/n./@廁所;
 lavender ,/n./@薰衣草;
 lengthen ,/v./@变长;
-leverage ,/n./@手段;,/n./@影响力;
+leverage ,/n./@手段;,/n./@影响力;,/n./@杠杆作用;
 lifelong ,/adj./@终身的;,/adj./@终生的;
 likeness ,/n./@相像;,/n./@類似;
 likewise ,/adv./@同樣;,/adv./@照樣;
@@ -654,7 +657,7 @@ monument ,/n./@纪念碑;
 morality ,/n./@道德品质;
 moreover ,/adv./@而且;,/adv./@此外;
 morpheme ,/n./@词素;
-mortgage ,/v./@抵押;
+mortgage ,/v./@抵押;,/n./@抵押贷款;
 mosquito ,/n./@蚊子;
 motivate ,/v./@激励;
 mountain ,/n./@山;
@@ -723,6 +726,7 @@ overcome ,/v./@克服;
 overdose ,/v./@服藥過量;,/v./@沉溺;,/n./@服藥過量;
 overflow ,/v./@溢出;,/n./@溢出;
 overhaul ,/n./@大修;
+overhear ,/vt./@无意中听到;
 overload ,/n.//v./@超载;
 overlook ,/v./@忽视;
 overpass ,/vt./@天桥;
@@ -786,6 +790,7 @@ powerful ,/adj./@强大的;,/adj./@有力的;
 practice ,/v./@練習;,/n./@練習;,/n./@實施;,/n./@實踐;,/n./@習慣;
 practise ,/v./@练习;,/v./@实践;
 pratfall ,/n./@坐跌;,/n./@失態;
+precinct ,/n./@警区;,/n./@选区;,/n./@步行区;,/n./@周边区域;
 precious ,/adj./@珍贵的;
 pregnant ,/adj./@怀孕的;
 premiere ,/v./@初次公演;
@@ -812,7 +817,8 @@ prophecy ,/n./@預言;
 prophesy ,/n./@預言;
 proposal ,/n./@提议;
 prospect ,/n./@前景;,/v./@勘探;
-protocol ,/n./@協議;
+prostate ,/n./@前列腺;
+protocol ,/n./@協議;,/n./@礼节;,/n./@条约草案;,/n./@议定书;
 prudence ,/n./@謹慎;
 punctual ,/adj./@准时的;
 puncture ,/v./@刺穿;
@@ -989,6 +995,7 @@ symmetry ,/n./@對稱;
 sympathy ,/n./@同情;
 symphony ,/n./@交响乐;
 synonymy ,/n./@同義;
+tactical ,/adj./@战术上的;,/adj./@战术的;,/adj./@有谋略的;,/adj./@短程的;
 tangible ,/adj./@有形的;,/adj./@切实的;
 taxation ,/n./@税务;,/n./@税;
 tectonic ,/adj./@构造的;,/adj./@建筑的;,/adj./@地壳构造的;
