--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -214,6 +214,7 @@ credulous ,/adj./@輕信的;
 criterion ,/n./@标准;
 criticize ,/v./@批评;
 crocodile ,/n./@鳄鱼;
+crossfire ,/n./@交叉火力;,/n./@激烈交锋;
 crossword ,/n./@纵横字谜;
 cruciform ,/adj./@十字形的;
 culminate ,/vi./@告终;
@@ -764,6 +765,7 @@ September ,/n./@九月;
 sequencer ,/n./@定序器;,/n./@程序;,/n./@装置;
 seriously ,/adv./@嚴肅地;,/adv./@嚴重地;
 seventeen ,/adj./@十七;
+severance ,/n./@解雇;,/n./@割断;,/n./@切断;,/n./@断绝;
 sexuality ,/n./@性慾;
 sharpener ,/n./@削筆刀;,/n./@磨刀石;
 shouldn't ,/v./@不能;
@@ -787,7 +789,7 @@ spotlight ,/n./@聚光燈;,/v./@聚光;
 sprightly ,/adv./@活潑地;,/adj./@活潑的;,/adj./@愉快的;
 stability ,/n./@穩定性;
 stalemate ,/n./@僵局;,/n./@困境;
-statement ,/n./@聲明;,/n./@陳述;
+statement ,/n./@聲明;,/n./@陳述;,/n./@口供;
 statistic ,/n./@资料;,/n./@统计数据;
 sterilize ,/v./@消毒;,/v./@滅菌;
 stimulate ,/v./@刺激;,/v./@鼓舞;
@@ -798,6 +800,7 @@ subjugate ,/vt./@征服;,/v./@剋制;
 submarine ,/n./@潜艇;
 subscribe ,/v./@订阅;,/v./@赞成;,/v./@签署;,/v./@捐助;
 subscript ,/adj./@下標的;,/n./@下標;
+subsidize ,/vt./@补贴;,/vt./@资助;
 substance ,/n./@物质;
 succulent ,/adj./@多汁的;
 suffocate ,/v./@窒息;,/v./@受阻;
@@ -883,5 +886,6 @@ withstand ,/v./@抵挡;,/v./@反抗;
 wonderful ,/adj./@精彩的;
 workforce ,/n./@劳动力;
 workplace ,/n./@工作地;
+wuthering ,/adj./@呼嘯;
 yesterday ,/n./@昨天;,/adv./@在昨天;
 youngster ,/n./@少年;
