--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -154,6 +154,7 @@ bound
 bowel
 brace
 brain
+brake
 brand
 brass
 brave
@@ -604,6 +605,7 @@ lapel
 lapse
 large
 lasso
+latch
 later
 laugh
 laver
@@ -655,8 +657,8 @@ magic
 major
 mango
 mania
-march
 March
+march
 match
 maths
 maxim
@@ -785,6 +787,7 @@ piano
 picky
 piece
 piety
+piker
 pilot
 pinch
 pious
