--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -196,6 +196,7 @@ burial
 butler
 butter
 button
+buyout
 bypass
 cackle
 caliph
@@ -411,6 +412,7 @@ dragon
 drawer
 dreary
 driver
+duffel
 duress
 during
 dynamo
@@ -551,6 +553,7 @@ frugal
 frumpy
 fungal
 funnel
+furrow
 futile
 future
 gadget
@@ -610,6 +613,7 @@ harrow
 hassle
 hasten
 hatred
+hazard
 health
 hearth
 heaven
@@ -1372,6 +1376,7 @@ undone
 unfair
 unfold
 unhold
+unhook
 unique
 unisex
 unison
