--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -298,6 +298,7 @@ costume
 cottage
 counsel
 country
+coupler
 courage
 courier
 cramped
@@ -1036,6 +1037,7 @@ scooter
 scourge
 scratch
 screech
+scumbag
 seastar
 secrecy
 section
@@ -1105,6 +1107,7 @@ sponsor
 spousal
 squalid
 squeeze
+staffer
 stagger
 stalker
 stamina
