--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -199,6 +199,7 @@ Columbia
 commence
 commerce
 communal
+commuter
 compiler
 complain
 complete
@@ -270,6 +271,7 @@ December
 decision
 decisive
 decorate
+decouple
 decrease
 decypher
 dedicate
@@ -347,6 +349,7 @@ dumpling
 duration
 dynamite
 dystopia
+eclectic
 economic
 effluvia
 effusive
@@ -723,6 +726,7 @@ overcome
 overdose
 overflow
 overhaul
+overhear
 overload
 overlook
 overpass
@@ -786,6 +790,7 @@ powerful
 practice
 practise
 pratfall
+precinct
 precious
 pregnant
 premiere
@@ -812,6 +817,7 @@ prophecy
 prophesy
 proposal
 prospect
+prostate
 protocol
 prudence
 punctual
@@ -989,6 +995,7 @@ symmetry
 sympathy
 symphony
 synonymy
+tactical
 tangible
 taxation
 tectonic
