--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -214,6 +214,7 @@ credulous
 criterion
 criticize
 crocodile
+crossfire
 crossword
 cruciform
 culminate
@@ -764,6 +765,7 @@ September
 sequencer
 seriously
 seventeen
+severance
 sexuality
 sharpener
 shouldn't
@@ -798,6 +800,7 @@ subjugate
 submarine
 subscribe
 subscript
+subsidize
 substance
 succulent
 suffocate
@@ -883,5 +886,6 @@ withstand
 wonderful
 workforce
 workplace
+wuthering
 yesterday
 youngster
