--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1130,7 +1130,7 @@ scroll ,/n./@捲軸;
 sculpt ,/v./@雕刻;,/v./@造型;
 scurry ,/v./@疾跑;,/v./@急趕;,/n./@短距賽跑;
 scurvy ,/adj./@卑鄙的;,/adj./@下流的;,/n./@壞血病;
-search ,/v./@搜索;,/v./@尋找;,/v./@搜查;
+search ,/v./@搜索;,/v./@尋找;,/v./@搜查;,/n./@寻找;,/n./@搜索;,/n./@搜查;
 season ,/n./@季節;
 secede ,/v./@脫離;,/v./@退出;
 second ,/adj./@第二的;
@@ -1396,8 +1396,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-Utopia ,/n./@烏托邦;
 utopia ,/n./@烏托邦;
+Utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
