--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1388,7 +1388,7 @@ unreal ,/adj./@不眞實的;
 unsung ,/adj./@未唱的;,/adj./@埋沒的;
 unveil ,/v./@揭開;,/v./@揭露;
 unwrap ,/v./@打開;,/v./@拆開;,/v./@解開;
-update ,/v./@更新;
+update ,/v./@更新;,/n./@更新;,/n./@新資訊;
 uphold ,/v./@維護;,/v./@支撑;,/v./@贊成;
 uppity ,/adj./@傲慢的;,/adj./@自負的;,/adj./@自大的;
 upward ,/adv./@向上;,/adj./@向上的;
@@ -1396,8 +1396,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-utopia ,/n./@烏托邦;
 Utopia ,/n./@烏托邦;
+utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
