--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -106,6 +106,7 @@ ceremonial ,/adj./@庆典的;,/adj./@仪式的;
 chalkboard ,/n./@黑板;
 charioteer ,/n./@双轮战车驾驭者;
 chivalrous ,/adj./@俠義的;
+chromosome ,/n./@染色体;
 circumcise ,/v./@割除包皮;,/v./@割除陰蒂;
 circumvent ,/v./@包圍;,/v./@繞行;
 collecting ,/n./@收集;
