--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -23,7 +23,7 @@ ask ,/v./@問;
 ass ,/n./@屁股;,/n./@驢;
 ave ,/n./@大街;,/n./@林蔭道;
 awe ,/v./@敬畏;
-axe ,/n./@斧子;,/n./@裁减;
+axe ,/n./@斧子;,/n./@裁减;,/n./@斧頭;
 bad ,/adj./@壞的;,/adj./@不好的;
 bag ,/n./@包;,/n./@袋;
 ban ,/v./@禁止;
@@ -189,8 +189,8 @@ man ,/n./@人;,/n./@男人;
 map ,/n./@地圖;,/v./@籌劃;
 mar ,/v./@毀壞;
 mat ,/n./@席子;
-May ,/n./@五月;
 may ,/aux./@能;,/adv./@可能;
+May ,/n./@五月;
 mea ,/pron./@我;
 men ,/n./@男人;
 met ,/v./@遇見;
