--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -659,6 +659,7 @@ null ,/n./@無;
 numb ,/adj./@麻木的;
 oath ,/n./@誓言;,/n./@誓約;
 obey ,/v./@遵守;
+Ohio ,/n./@俄亥俄州;
 okay ,/adj./@好的;,/adj./@是;
 okra ,/n./@秋葵;
 omit ,/v./@疏漏;
