--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -142,6 +142,7 @@ participance ,/n./@参与;,/n./@分享;
 participancy ,/n./@参与;,/n./@分享;
 particularly ,/adv./@特别;
 penitentiary ,/n./@监狱;
+Pennsylvania ,/n./@宾夕法尼亚州;
 periodically ,/adv./@阶段性的;
 perseverance ,/n./@坚持;
 perspiration ,/n./@流汗;
