--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -779,6 +779,7 @@ slaughter ,/n./@屠殺;
 solicitor ,/n./@律師;
 something ,/n./@某些事;,/n./@某事;
 sometimes ,/adv./@有時;,/adv./@不時;
+soporific ,/adj./@催眠的;,/adj./@昏昏欲睡的;,/adj./@使人昏昏欲睡的;
 specially ,/adj./@特别的;
 spectacle ,/n./@場面;
 spectator ,/n./@旁观者;,/n./@观众;
