--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -455,6 +455,7 @@ phenomenal ,/adj./@显著的;,/adj./@現象的;,/adj./@非凡的;
 phenomenon ,/n./@現象;,/n./@非凡的人;
 philosophy ,/n./@哲学;
 phonograph ,/n./@留声机;,/n./@唱机;
+pickpocket ,/n./@扒手;,/n./@小偷;
 plantation ,/n./@種植園;
 playwright ,/n./@剧作家;
 polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
