--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -79,7 +79,7 @@ dot ,/n./@點;
 dry ,/adj./@干@的;
 dub ,/v./@配音;
 due ,/adj./@到期的;,/adj./@應付的;,/adj./@預期的;,/adj./@應得的;,/n./@應付物;,/n./@應得物;
-dye ,/v./@染色;
+dye ,/v./@染色;,/n./@染料;
 ear ,/n./@耳;
 eat ,/vt./@吃;
 egg ,/n./@蛋;
