--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -543,7 +543,7 @@ look ,/v.//vi.//vt./@看;
 loom ,/v./@隱隱出現;,/n./@織布機;
 loop ,/n./@環;,/n./@循環;
 lord ,/n./@主人;,/n./@上帝;
-lore ,/n./@知識;
+lore ,/n./@知識;,/n./@学问;,/n./@传说;
 lose ,/v./@遺失;,/v./@失敗;
 lost ,/v./@丢失;,/adj./@失去的;,/adj./@迷失的;
 loud ,/adv./@大聲@的;
