--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -305,7 +305,7 @@ datum ,/n./@數據;
 daunt ,/v./@驚嚇;
 death ,/n./@死亡;
 debug ,/v./@調試;
-debut ,/n./@初次登臺;
+debut ,/n./@初次登臺;,/n./@首次亮相;
 decay ,/v./@腐敗;
 decor ,/n./@裝飾;,/n./@佈置;
 decoy ,/v./@誘騙;
@@ -539,7 +539,7 @@ hasty ,/adj./@草率的;,/adj./@匆忙的;
 hatch ,/v./@孵化;,/n./@艙門;
 haunt ,/v./@縈繞;,/v./@作祟;
 haven ,/n./@避難所;,/n./@港灣;
-havoc ,/n./@浩劫;
+havoc ,/n./@浩劫;,/n./@破坏;,/n./@毁坏;,/n./@混乱;
 heady ,/adj./@興奮的;,/adj./@任性的;
 heart ,/n./@心;
 heave ,/v./@起伏;,/v./@舉起;,/v./@嘆氣;
@@ -870,7 +870,7 @@ rebut ,/v./@反駁;,/v./@駁囘;,/v./@揭露;,/n./@反駁;
 recur ,/v./@再發生;,/v./@復發;
 refer ,/v./@參考;
 regal ,/adj./@帝王的;,/adj./@王室的;,/adj./@莊嚴的;,/adj./@豪華的;
-rehab ,/v./@修復;
+rehab ,/n./@康复;,/vt./@修复;
 reign ,/v./@統治;,/v./@支配;
 relax ,/v./@放松;
 relay ,/v./@转播;,/v./@中继;
