--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -43,6 +43,7 @@ allude ,/v./@間接提到;
 allure ,/v./@吸引;
 almost ,/adv./@幾乎;
 always ,/adv./@總是;
+amoeba ,/n./@阿米巴;,/n./@变形虫;
 amount ,/n./@數量;
 ampere ,/n./@安培;
 amulet ,/n./@护身符;
@@ -359,6 +360,7 @@ delete ,/v./@刪除;
 deluge ,/n./@洪水;,/n./@汎濫;,/n./@暴雨;
 demand ,/v./@命令;
 dement ,/adj./@癡呆的;,/n./@癡呆;
+demise ,/n./@死亡;,/n./@败落;,/n./@倒閉;,/n./@垮臺;
 demure ,/adj./@端庄的;,/adj./@娴静的;,/adj./@矜持的;,/adj./@庄重的;
 denote ,/v./@表示;
 depart ,/v./@離開;,/v./@出发;
@@ -1308,7 +1310,7 @@ tattoo ,/n./@紋身;
 tavern ,/n./@酒館;,/n./@客棧;
 teapot ,/n./@茶壺;
 temper ,/n./@脾氣;,/n./@回火;
-tenant ,/n./@承租人;,/n./@房客;,/n./@居住者;
+tenant ,/n./@承租人;,/n./@房客;,/n./@居住者;,/n./@租户;
 tender ,/adj./@溫柔的;
 tennis ,/n./@網球;
 tenure ,/n./@終身職位;,/n./@任期;
