--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -611,6 +611,7 @@ imitate ,/v./@模仿;
 immerse ,/v./@沉浸于;,/vt./@浸泡;
 immoral ,/adj./@不道德的;,/adj./@堕落的;
 impeach ,/v./@彈劾;,/v.//n./@控告;,/v.//n./@檢舉;,/v.//n./@懷疑;
+impetus ,/n./@动力;,/n./@推动力;,/n./@促进;,/n./@推动;
 implore ,/v./@哀求;,/v./@懇求;
 impress ,/v./@銘記;
 improve ,/v./@改善;
