--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -348,6 +348,8 @@ downward ,/adj./@向下的;,/adv./@向下;
 dumpling ,/n./@餃子;,/n./@湯糰;,/n./@麵糰;
 duration ,/n./@持续;
 dynamite ,/n./@炸药;
+dyslexia ,/n./@诵读困难;
+dyslexic ,/adj./@诵读困难的;
 dystopia ,/n./@糟糕的社會;,/n./@地獄般的處境;
 eclectic ,/adj./@兼收并蓄的;,/adj./@不拘一格的;,/adj./@相容並蓄的;,/adj./@博採眾長的;
 economic ,/adj./@经济学的;
@@ -472,7 +474,7 @@ glossary ,/n./@詞匯表;,/n./@術語表;
 gluttony ,/n./@暴食;,/n./@貪食;
 goodness ,/n./@善良;,/n./@优秀;
 goodwill ,/n./@友善;
-gorgeous ,/adj./@华丽的;,/adj./@灿烂的;
+gorgeous ,/adj./@华丽的;,/adj./@灿烂的;,/adj./@漂亮的;,/adj./@令人愉快的;,/adj./@美丽的;
 gourmand ,/n./@美食家;
 governor ,/n./@统治者;
 gracious ,/adj./@亲切的;,/adj./@高尚的;
