--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -382,6 +382,7 @@ feudalism ,/n./@封建主義;
 financial ,/adj./@经济的;
 firstname ,/n./@名;
 fisherman ,/n./@漁夫;,/n./@漁民;
+flashback ,/n./@闪回;,/n./@倒叙;
 flattened ,/adj./@沒精打采的;
 flippancy ,/n./@轻率;,/n./@轻率无礼;
 fluctuate ,/v./@波動;,/v./@起伏;
@@ -792,6 +793,7 @@ stability ,/n./@穩定性;
 stalemate ,/n./@僵局;,/n./@困境;
 statement ,/n./@聲明;,/n./@陳述;,/n./@口供;
 statistic ,/n./@资料;,/n./@统计数据;
+statutory ,/adj./@法定的;,/adj./@规定的;,/adj./@成文的;,/adj./@成文法的;
 sterilize ,/v./@消毒;,/v./@滅菌;
 stimulate ,/v./@刺激;,/v./@鼓舞;
 stressful ,/adj./@紧张的;
