--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -43,6 +43,7 @@ allude
 allure
 almost
 always
+amoeba
 amount
 ampere
 amulet
@@ -359,6 +360,7 @@ delete
 deluge
 demand
 dement
+demise
 demure
 denote
 depart
