--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -382,6 +382,7 @@ feudalism
 financial
 firstname
 fisherman
+flashback
 flattened
 flippancy
 fluctuate
@@ -792,6 +793,7 @@ stability
 stalemate
 statement
 statistic
+statutory
 sterilize
 stimulate
 stressful
